--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
  <head>
    <title>My First Web Page</title>
   </head>
+  <link rel=stylesheet href="style.css">
   <body>
        <h1>Hello, world</h1>
 
@@ -9,6 +10,8 @@
      <p> DARRKNESS, NO PARENTS<p>
 
 
+
      <img src="http://www.zooborns.com/.a/6a010535647bf3970b017ee997dd63970d-500wi"><img>
+     
     </body>
 <html>
